--- a/Whitelagoon.Web/Views/Villa/Create.cshtml
+++ b/Whitelagoon.Web/Views/Villa/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WhiteLagoon.Domain.Entities.Villa
+﻿@model Villa
 
 <div class="w-100 card border-0 p-4">
 	<div class="card-header bg-success bg-gradient ml-0 py-3">
@@ -11,29 +11,36 @@
 	<div class="card-body border p-4">
 		<form method="post" class="row">
 			<div class="p-3">
+				<div asp-validation-summary="ModelOnly"></div>
 				<div class="form-floating py-1 col-12">
 					<input asp-for="Name" class="form-control border shadow"/>
-					<label asp-for="Name" class="ms-2">Name</label>
+					<label asp-for="Name" class="ms-2"></label>
+					<span asp-validation-for="Name" class="text-danger"></span>
 				</div>
 				<div class="form-floating py-1 col-12">
 					<input asp-for="Description" class="form-control border shadow"/>
-					<label asp-for="Description" class="ms-2">Description</label>
+					<label asp-for="Description" class="ms-2"></label>
+					<span asp-validation-for="Description" class="text-danger"></span>
 				</div>
 				<div class="form-floating py-1 col-12">
 					<input asp-for="Price" class="form-control border shadow"/>
-					<label asp-for="Price" class="ms-2">Price</label>
+					<label asp-for="Price" class="ms-2"></label>
+					<span asp-validation-for="Price" class="text-danger"></span>
 				</div>
 				<div class="form-floating py-1 col-12">
 					<input asp-for="Sqft" class="form-control border shadow"/>
-					<label asp-for="Sqft" class="ms-2">Sqft</label>
+					<label asp-for="Sqft" class="ms-2"></label>
+					<span asp-validation-for="Sqft" class="text-danger"></span>
 				</div>
 				<div class="form-floating py-1 col-12">
 					<input asp-for="Occupancy" class="form-control border shadow" />
-					<label asp-for="Occupancy" class="ms-2">Occupancy</label>
+					<label asp-for="Occupancy" class="ms-2"></label>
+					<span asp-validation-for="Occupancy" class="text-danger"></span>
 				</div>
 				<div class="form-floating py-1 col-12">
 					<input asp-for="ImageUrl" class="form-control border shadow"/>
-					<label asp-for="ImageUrl" class="ms-2">ImageUrl</label>
+					<label asp-for="ImageUrl" class="ms-2"></label>
+					<span asp-validation-for="ImageUrl" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="row pt-2">
@@ -51,3 +58,9 @@
 		</form>
 	</div>
 </div>
+
+@section Scripts{
+	@{
+		<partial name="_ValidationScriptsPartial"></partial>
+	}
+}
