--- a/Whitelagoon.Web/Views/Shared/_Layout.cshtml
+++ b/Whitelagoon.Web/Views/Shared/_Layout.cshtml
@@ -27,12 +27,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
+                        </li><li class="nav-item">
                             <a class="nav-link text-white" asp-controller="Villa" asp-action="Index">Villa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-controller="VillaNumber" asp-action="Index">VillaNumber</a>
                         </li>
                     </ul>
                 </div>
