--- a/Whitelagoon.Web/Views/_ViewImports.cshtml
+++ b/Whitelagoon.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
-﻿@using Whitelagoon.Web
-@using Whitelagoon.Web.Models
-@using Whitelagoon.Web.ViewModel
+﻿@using WhiteLagoon.Web
+@using WhiteLagoon.Web.Models
+@using WhiteLagoon.Web.ViewModel
 @using WhiteLagoon.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
