Final Changes For Delete image and Amenity Functionality Added.

--- a/Whitelagoon.Web/Views/Villa/Index.cshtml
+++ b/Whitelagoon.Web/Views/Villa/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WhiteLagoon.Domain.Entities.Villa>
+﻿@model IEnumerable<Villa>
 
 <div class="w-100 card border-0 p-4">
 	<div class="card-header bg-success bg-gradient ml-0 py-3">
@@ -12,7 +12,7 @@
 		<div class="row pb-3">
 			<div class="col-6 offset-6 text-end">
 				<a asp-controller="Villa" asp-action="Create" class="btn btn-secondary">
-					<i class="bi bi-plus-circle"></i>Create New Villa
+					<i class="bi bi-plus-circle"></i> Create New Villa
 				</a>
 			</div>
 		</div>
