--- a/Whitelagoon.Web/Views/Shared/_Layout.cshtml
+++ b/Whitelagoon.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-controller="VillaNumber" asp-action="Index">VillaNumber</a>
+                        </li><li class="nav-item">
+                            <a class="nav-link text-white" asp-controller="Amenity" asp-action="Index">Amenity</a>
                         </li>
                     </ul>
                 </div>
