--- a/Whitelagoon.Web/Views/Shared/_Layout.cshtml.css
+++ b/Whitelagoon.Web/Views/Shared/_Layout.cshtml.css
@@ -1,6 +1,6 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+/*
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -9,6 +9,10 @@ a.navbar-brand {
 
 a {
   color: #0077cc;
+}
+*/
+main {
+    margin-bottom: 50px; /* Adjust as needed */
 }
 
 .btn-primary {
